--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Raleway:wght@400;700&display=swap"
+    />
     <title>AI Safety Colombia</title>
   </head>
   <body>
